--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,6 +1,6 @@
 ---
 name: example-product
-product_version: "1.5.10.0"
+product_version: "1.5.11.0-alpha"
 metadata_version: "1.5"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
