--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -386,6 +386,11 @@ migrations:
       - type: update
         selector: "product_version"
         to: *to_version
+  - from_version: "1.5.11.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
   - from_version: "1.6.0.0"
     rules:
       - type: update
