--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -211,6 +211,7 @@ job_types:
     static_ip: 0
     dynamic_ip: 1
     max_in_flight: 1
+    single_az_only: true
     instance_definition:
       name: instances
       type: integer
@@ -291,6 +292,7 @@ job_types:
     static_ip: 1
     dynamic_ip: 0
     max_in_flight: 1
+    single_az_only: true
     instance_definition:
       name: instances
       type: integer
@@ -512,6 +514,7 @@ job_types:
     static_ip: 0
     dynamic_ip: 1
     max_in_flight: 2
+    single_az_only: false
     instance_definition:
       name: instances
       type: integer
@@ -542,6 +545,7 @@ job_types:
     static_ip: 0
     dynamic_ip: 1
     max_in_flight: 1
+    single_az_only: false
     instance_definition:
       name: instances
       type: integer
