--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -8,6 +8,13 @@ rank: 1
 stemcell_criteria:
   os: ubuntu-trusty
   version: "3202" # Bosh stemcell should match Ops Manager with same version
+
+  # allows you to opt-out of the default behaviour of Ops Manager 1.7 to always
+  # use the latest patch update of an available stemcell version. Set to 'false'
+  # to use the exact version match of the stemcell.
+  #
+  # default: true
+  enable_patch_security_updates: true
 releases:
   - name: example-release
     file: example-release-11.tgz
