--- a/example-product/content_migrations/example-product.yml
+++ b/example-product/content_migrations/example-product.yml
@@ -1,7 +1,7 @@
 ---
 product: example-product
 installation_schema_version: "1.5"
-to_version: &to_version "1.5.17.0-alpha"
+to_version: &to_version "1.5.17.0"
 
 migrations:
   - from_version: "1.4.0.0"
@@ -412,6 +412,11 @@ migrations:
         selector: "product_version"
         to: *to_version
   - from_version: "1.5.16.0"
+    rules:
+      - type: update
+        selector: "product_version"
+        to: *to_version
+  - from_version: "1.5.17.0"
     rules:
       - type: update
         selector: "product_version"
