--- a/ci/tasks/generate-example-product.yml
+++ b/ci/tasks/generate-example-product.yml
@@ -6,6 +6,9 @@ inputs:
 - name: ops-manager-example
 - name: version
 
+outputs:
+  - name: example-product-version
+
 run:
   path: ops-manager-example/ci/scripts/generate-example-product
 
