--- a/ci/tasks/generate-example-product.yml
+++ b/ci/tasks/generate-example-product.yml
@@ -7,7 +7,7 @@ inputs:
 - name: version
 
 outputs:
-  - name: example-product-version
+- name: example-product-output
 
 run:
   path: ops-manager-example/ci/scripts/generate-example-product
