--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -140,6 +140,11 @@ form_types:
             property_inputs:
               - reference: .properties.example_selector.filet_mignon_option.rarity_dropdown
                 label: 'How rare?'
+          - reference: .properties.example_selector.beverage_option
+            label: 'Beverage'
+            property_inputs:
+              - reference: .properties.example_selector.beverage_option.cola
+                label: 'What kind of soda?'
   - name: static_ips_form
     label: 'Static IPs'
     description: 'Where you go to set static IPs'
@@ -193,6 +198,16 @@ property_blueprints:
                 label: 'Medium'
               - name: well-done
                 label: 'Well done'
+      - name: beverage_option
+        select_value: Beverage
+        property_blueprints:
+          - name: cola
+            label: Cola
+            type: string
+            configurable: true
+            optional: true
+            manifest: |
+              beverage: (( .properties.example_selector.beverage_option.cola.value ))
   - name: example_collection
     type: collection
     configurable: true
@@ -308,8 +323,10 @@ job_types:
       constraints:
         max: 1
       zero_if:
-        property_reference: '.web_server.example_text'
-        property_value: 'magic value'
+        property_reference: '.properties.example_selector'
+        property_values:
+          - Pizza
+          - Beverage
     resource_definitions:
       - name: ram
         type: integer
