--- a/example-product/metadata/example-product.yml
+++ b/example-product/metadata/example-product.yml
@@ -1,6 +1,7 @@
 ---
 name: example-product
 product_version: "1.7.0.0-alpha"
+minimum_version_for_upgrade: "1.6.0.0"
 metadata_version: "1.7"
 label: 'Ops Manager: Example Product'
 description: An example product to demonstrate Ops Manager product-author features
